fix(final): change the answer align problems

--- a/Content/Styles/Divided/Site.scss
+++ b/Content/Styles/Divided/Site.scss
@@ -27,7 +27,7 @@ html, body {
 }
 
 %spanish-english-shared {
-    margin-left: 0px;
+    margin-left: 50px;
     margin-right: 0px;
     padding: 5px;
     padding-left: 0;
