--- a/Content/Styles/Stack/Site.scss
+++ b/Content/Styles/Stack/Site.scss
@@ -155,7 +155,7 @@ html, body {
 }
 
 %spanish-english {
-    margin-left: 0px;
+    margin-left: 50px;
     margin-right: 0px;
     padding: 5px;
     padding-left: 0;
