--- a/Content/Styles/Symbols/Site.scss
+++ b/Content/Styles/Symbols/Site.scss
@@ -40,7 +40,7 @@ html, body {
 }
 
 .spanish, .english {
-  margin: 0 25px;
+  margin: 0 50px;
   margin-right: 0px;
   padding: 5px;
 }
@@ -237,6 +237,7 @@ input[type="text"] {
 
 .optionsContainer{
   margin-top: 30px;
+  margin-left:25px;
 }
 
 .table-text {
